# trias

./: CMakeLists.txt  Dockerfile  README.md
include/: circle.h  delaunay.h  edge.h  edges.h  node.h  point.h  sobel.h  triangle.h
src/: circle.cpp  delaunay.cpp  edge.cpp  edges.cpp  main.cpp  node.cpp  sobel.cpp  triangle.cpp
